# claude-free-play

./: .env.example  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  pyproject.toml
fc_play/api/: admin_routes.py
fc_play/api/admin_static/: admin.css  admin.js  index.html
fc_play/cli/: entrypoints.py
fc_play/config/: constants.py  settings.py
fc_play/tui/: app.py  themes.py
scripts/: install.ps1  install.sh
tests/: test_imports.py
