[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fc-play"
version = "1.0.0"
description = "🎮 FC-Play — Multi-provider model gateway with beautiful terminal & web UI. Supports 20+ providers."
requires-python = ">=3.12.0"
license = { text = "MIT" }
authors = [
    { name = "zahrinurrasyiid", email = "" },
    { name = "XunowID", email = "" },
]
keywords = ["proxy", "gateway", "api", "provider", "model-hub"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "jsonschema>=4.20.0",
    "pygments>=2.17.0",
]

[project.scripts]
fc-play = "fc_play.cli.entrypoints:cli"
fc-play-server = "fc_play.cli.entrypoints:server_main"
fc-play-admin = "fc_play.cli.entrypoints:admin_main"
fc-play-tui = "fc_play.cli.entrypoints:tui_main"

[project.optional-dependencies]
voice = [
    "grpcio>=1.60.0",
    "nvidia-riva-client>=2.16.0",
]
voice_local = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "librosa>=0.10.0",
]
messaging = [
    "discord.py>=2.3.0",
    "python-telegram-bot>=20.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PERF", "RUF", "ARG"]
ignore = ["E501", "B008", "RUF006", "ARG001", "ARG002"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true

[project.urls]
Homepage = "https://github.com/XunowID/fc-play"
Source = "https://github.com/XunowID/fc-play"
Issues = "https://github.com/XunowID/fc-play/issues"
